--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body class="bg-gradient-to-r from-slate-900 to-black text-white font-sans">
 
   <nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
-    <a href="anasayfa.html">
-      <div class="flex items-center space-x-4">
-        <img src="/photos/kayzerr10-Photoroom.png" alt="Kayzer Logo" class="h-24">
+    <a href="index.html">
+      <div class="flex items-center space-x-4 navbar">
+        <img src="/photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
         <div>
           <h1 class="text-3xl font-extrabold tracking-wide">KAYZER</h1>
           <p class="text-base tracking-wider">HUKUK & DANIŞMANLIK</p>
