--- a/hizmetler.html
+++ b/hizmetler.html
@@ -26,13 +26,13 @@
               </a>
               <ul class="absolute left-0 mt-3 w-56 bg-yellow-700 text-white rounded-xl shadow-xl opacity-0 scale-95 invisible group-hover:visible group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 ease-out z-50">
                 <li><a href="hizmetler.html" class="block px-5 py-3 hover:bg-yellow-600 rounded-t-xl">Ticaret Hukuku</a></li>
-                <li><a href="#miras" class="block px-5 py-3 hover:bg-yellow-600">Miras Hukuku</a></li>
-                <li><a href="#iş" class="block px-5 py-3 hover:bg-yellow-600">İş Hukuku</a></li>
-                <li><a href="#aile" class="block px-5 py-3 hover:bg-yellow-600">Aile Hukuku</a></li>
-                <li><a href="#idare" class="block px-5 py-3 hover:bg-yellow-600">İdare Hukuku</a></li>
-                <li><a href="#icraiflas" class="block px-5 py-3 hover:bg-yellow-600">İcra ve İflas Hukuku</a></li>
-                <li><a href="#ceza" class="block px-5 py-3 hover:bg-yellow-600">Ceza Hukuku</a></li>
-                <li><a href="#tüketici" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tüketici Hukuku</a></li>
+                <li><a href="/hizmetler.html#miras" class="block px-5 py-3 hover:bg-yellow-600">Miras Hukuku</a></li>
+                <li><a href="/hizmetler.html#iş" class="block px-5 py-3 hover:bg-yellow-600">İş Hukuku</a></li>
+                <li><a href="/hizmetler.html#aile" class="block px-5 py-3 hover:bg-yellow-600">Aile Hukuku</a></li>
+                <li><a href="/hizmetler.html#idare" class="block px-5 py-3 hover:bg-yellow-600">İdare Hukuku</a></li>
+                <li><a href="/hizmetler.html#icraiflas" class="block px-5 py-3 hover:bg-yellow-600">İcra ve İflas Hukuku</a></li>
+                <li><a href="/hizmetler.html#ceza" class="block px-5 py-3 hover:bg-yellow-600">Ceza Hukuku</a></li>
+                <li><a href="/hizmetler.html#tüketici" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tüketici Hukuku</a></li>
               </ul>
             </div>
             <a href="hakkimizda.html" class="text-white hover:text-yellow-400 transition-colors duration-200">HAKKIMIZDA</a>
@@ -46,6 +46,9 @@
         </button>
       </nav>
       
+  <div class="h-[162px] block">
+
+  </div>
 
       <section id="hizmetler" class="py-20 px-6 bg-gray-800">
         <h3 class="text-4xl font-bold text-center mt-24 mb-16">Hizmetlerimiz</h3>
