--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kayzer Hukuk</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="java.js"></script>
 </head>
 
 <body class="bg-gradient-to-r from-slate-900 to-black text-white font-sans">
 
-  <nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
+  <nav
+    class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
     <a href="index.html">
       <div class="flex items-center space-x-4 navbar">
         <img src="/photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
@@ -23,25 +26,29 @@
 
     <div class="hidden md:flex items-center space-x-10 text-lg font-medium" id="navbar">
       <div class="relative group">
-        <a href="hizmetler.html" class="nav-link cursor-pointer text-white hover:text-yellow-400 transition-colors duration-200">
+        <a href="hizmetler.html"
+          class="nav-link cursor-pointer text-white hover:text-yellow-400 transition-colors duration-200">
           HİZMETLERİMİZ ▾
         </a>
-        <ul class="absolute left-0 mt-3 w-56 bg-yellow-700 text-white rounded-xl shadow-xl opacity-0 scale-95 invisible group-hover:visible group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 ease-out z-50">
+        <ul
+          class="absolute left-0 mt-3 w-56 bg-yellow-700 text-white rounded-xl shadow-xl opacity-0 scale-95 invisible group-hover:visible group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 ease-out z-50">
           <li><a href="hizmetler.html" class="block px-5 py-3 hover:bg-yellow-600 rounded-t-xl">Ticaret Hukuku</a></li>
           <li><a href="/hizmetler.html#miras" class="block px-5 py-3 hover:bg-yellow-600">Miras Hukuku</a></li>
           <li><a href="/hizmetler.html#iş" class="block px-5 py-3 hover:bg-yellow-600">İş Hukuku</a></li>
           <li><a href="/hizmetler.html#aile" class="block px-5 py-3 hover:bg-yellow-600">Aile Hukuku</a></li>
           <li><a href="/hizmetler.html#idare" class="block px-5 py-3 hover:bg-yellow-600">İdare Hukuku</a></li>
-          <li><a href="/hizmetler.html#icraiflas" class="block px-5 py-3 hover:bg-yellow-600">İcra ve İflas Hukuku</a></li>
+          <li><a href="/hizmetler.html#icraiflas" class="block px-5 py-3 hover:bg-yellow-600">İcra ve İflas Hukuku</a>
+          </li>
           <li><a href="/hizmetler.html#ceza" class="block px-5 py-3 hover:bg-yellow-600">Ceza Hukuku</a></li>
-          <li><a href="/hizmetler.html#tüketici" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tüketici Hukuku</a></li>
+          <li><a href="/hizmetler.html#tüketici" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tüketici
+              Hukuku</a></li>
         </ul>
       </div>
-    
-      <a href="hakkimizda.html" class="text-white hover:text-yellow-400 transition-colors duration-200">HAKKIMIZDA</a>  
+
+      <a href="hakkimizda.html" class="text-white hover:text-yellow-400 transition-colors duration-200">HAKKIMIZDA</a>
       <a href="iletisim.html" class="text-white hover:text-yellow-400 transition-colors duration-200">İLETİŞİM</a>
     </div>
-    <button id="menu-toggle" class="md:hidden text-white">
+    <button id="menu-toggle" class="md:hidden text-white" onclick="">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
       </svg>
@@ -49,8 +56,9 @@
   </nav>
   <div class="h-[162px] block">
 
+
   </div>
-  
+
 
   <header class="h-screen flex flex-col justify-center items-center text-center space-y-3 px-4">
     <img src="/photos/kayzer-png.png" alt="Kayzer Logo" style="width: 800px; height: 800px;">
@@ -64,32 +72,37 @@
   <section id="hakkimizda" class="service-card py-12 px-6 bg-gray-800 text-white">
     <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-10 items-center">
       <div class="flex justify-center rounded-2xl border-4 border-yellow-400">
-        <img 
-          src="photos/mustafa.JPG" class="w-[600px] h-[600px] md:w-[600px] md:h-[600px] object-cover rounded-2xl shadow-lg">
+        <img src="photos/mustafa.JPG"
+          class="w-[600px] h-[600px] md:w-[600px] md:h-[600px] object-cover rounded-2xl shadow-lg">
       </div>
 
       <div>
         <h2 class="text-3xl font-bold mb-4 border-b pb-2 border-yellow-400">Hakkımda</h2>
         <p class="leading-relaxed text-gray-200">
-          <b>Mustafa Talha Er</b>, 1997 yılında Kayseri'nin Kocasinan ilçesinde dünyaya geldi. 2013 yılına kadar eğitimini Türkiye'de tamamladı. 
-          2013-2016 yılları arasında Almanya'da Geschwister Scholl Schule ve Zeppelin Gewerbeschule'de eğitim aldı. 
+          <b>Mustafa Talha Er</b>, 1997 yılında Kayseri'nin Kocasinan ilçesinde dünyaya geldi. 2013 yılına kadar
+          eğitimini Türkiye'de tamamladı.
+          2013-2016 yılları arasında Almanya'da Geschwister Scholl Schule ve Zeppelin Gewerbeschule'de eğitim aldı.
           2017-2021 yılları arasında İnönü Üniversitesi Hukuk Fakültesi'nden mezun oldu.
         </p>
         <p class="text-lg leading-relaxed text-gray-200 mt-4">
-          2021-2023 yılları arasında Denizbank, Ziraat Bankası, Vakıfbank ve Kuveyt Türk Bankalarının vekilliğini üstlenen bir hukuk ofisinde görev aldı. 
-          2023 yılında kendi hukuk ofisini kurdu. 2025 yılı itibarıyla Yurt Dışı Kayserili İşverenler Birliği'nin Türkiye Hukuk Sorumlusu olarak, 
-          hem yurt dışında yaşayan hem de yurt içinde yaşayan olmak üzere tüm vatandaşlara hizmet vermeye devam etmektedir.
+          2021-2023 yılları arasında Denizbank, Ziraat Bankası, Vakıfbank ve Kuveyt Türk Bankalarının vekilliğini
+          üstlenen bir hukuk ofisinde görev aldı.
+          2023 yılında kendi hukuk ofisini kurdu. 2025 yılı itibarıyla Yurt Dışı Kayserili İşverenler Birliği'nin
+          Türkiye Hukuk Sorumlusu olarak,
+          hem yurt dışında yaşayan hem de yurt içinde yaşayan olmak üzere tüm vatandaşlara hizmet vermeye devam
+          etmektedir.
         </p>
       </div>
     </div>
   </section>
-  
+
 
 
   <section id="iletisim" class="py-20 px-6 bg-black text-center">
     <h2 class="text-4xl font-bold mb-6">Bizimle İletişime Geçin</h2>
     <p class="text-gray-400 mb-8">Sorularınızı yanıtlamaktan mutluluk duyarız.</p>
-    <a href="mailto:info@kayzerhukuk.com" class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-3 px-6 rounded-full">
+    <a href="mailto:info@kayzerhukuk.com"
+      class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-3 px-6 rounded-full">
       E-Posta Gönder
     </a>
   </section>
@@ -101,5 +114,5 @@
   <script src="java.js"> </script>
 
 
-</body>
-</html>
+</body >
+</html >
