--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="hakkimizda.html" class="text-white hover:text-yellow-400 transition-colors duration-200">HAKKIMIZDA</a>
       <a href="iletisim.html" class="text-white hover:text-yellow-400 transition-colors duration-200">İLETİŞİM</a>
     </div>
-    <button id="menu-toggle" class="md:hidden text-white" onclick="">
+    <button id="menu-toggle" class="md:hidden text-white" onclick="toggleMenu()">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
       </svg>
