--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -9,43 +9,53 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body class="bg-gray-900 text-white font-sans">
-    <nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
-        <a href="index.html">
-          <div class="flex items-center space-x-4">
-            <img src="photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
-            <div>
-              <h1 class="text-3xl font-extrabold tracking-wide">KAYZER</h1>
-              <p class="text-base tracking-wider">HUKUK & DANIŞMANLIK</p>
-            </div>
-          </div>
-        </a>
-      
-        <div class="hidden md:flex items-center space-x-10 text-lg font-medium" id="navbar">
-            <div class="relative group">
-              <a href="hizmetler.html" class="nav-link cursor-pointer text-white hover:text-yellow-400 transition-colors duration-200">
-                HİZMETLERİMİZ ▾
-              </a>
-              <ul class="absolute left-0 mt-3 w-56 bg-yellow-700 text-white rounded-xl shadow-xl opacity-0 scale-95 invisible group-hover:visible group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 ease-out z-50">
-                <li><a href="hizmetler.html" class="block px-5 py-3 hover:bg-yellow-600 rounded-t-xl">Ticaret Hukuku</a></li>
-                <li><a href="/hizmetler.html#miras" class="block px-5 py-3 hover:bg-yellow-600">Miras Hukuku</a></li>
-                <li><a href="/hizmetler.html#iş" class="block px-5 py-3 hover:bg-yellow-600">İş Hukuku</a></li>
-                <li><a href="/hizmetler.html#aile" class="block px-5 py-3 hover:bg-yellow-600">Aile Hukuku</a></li>
-                <li><a href="/hizmetler.html#idare" class="block px-5 py-3 hover:bg-yellow-600">İdare Hukuku</a></li>
-                <li><a href="/hizmetler.html#icraiflas" class="block px-5 py-3 hover:bg-yellow-600">İcra ve İflas Hukuku</a></li>
-                <li><a href="/hizmetler.html#ceza" class="block px-5 py-3 hover:bg-yellow-600">Ceza Hukuku</a></li>
-                <li><a href="/hizmetler.html#tüketici" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tüketici Hukuku</a></li>
-              </ul>
-            </div>
-            <a href="hakkimizda.html" class="text-white hover:text-yellow-400 transition-colors duration-200">HAKKIMIZDA</a>
-            <a href="iletisim.html" class="text-white hover:text-yellow-400 transition-colors duration-200">İLETİŞİM</a>
-          </div>
+<nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
+  <!-- Logo -->
+  <a href="index.html">
+    <div class="flex items-center space-x-4">
+      <img src="photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
+      <div>
+        <h1 class="text-3xl font-extrabold tracking-wide">KAYZER</h1>
+        <p class="text-base tracking-wider">HUKUK & DANIŞMANLIK</p>
+      </div>
+    </div>
+  </a>
 
-        <button id="menu-toggle" class="md:hidden text-white" onclick="toggleMenu()">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
-          </svg>
-        </button>
-      </nav>
+  <!-- Masaüstü Menü -->
+  <div class="hidden md:flex items-center space-x-10 text-lg font-medium" id="navbar">
+    <div class="relative group">
+      <a href="hizmetler.html" class="nav-link cursor-pointer text-white hover:text-yellow-400 transition-colors duration-200">
+        HİZMETLERİMİZ ▾
+      </a>
+      <ul class="absolute left-0 mt-3 w-56 bg-yellow-700 text-white rounded-xl shadow-xl opacity-0 scale-95 invisible group-hover:visible group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 ease-out z-50">
+        <li><a href="hizmetler.html" class="block px-5 py-3 hover:bg-yellow-600 rounded-t-xl">Ticaret Hukuku</a></li>
+        <li><a href="/hizmetler.html#miras" class="block px-5 py-3 hover:bg-yellow-600">Miras Hukuku</a></li>
+        <li><a href="/hizmetler.html#iş" class="block px-5 py-3 hover:bg-yellow-600">İş Hukuku</a></li>
+        <li><a href="/hizmetler.html#aile" class="block px-5 py-3 hover:bg-yellow-600">Aile Hukuku</a></li>
+        <li><a href="/hizmetler.html#idare" class="block px-5 py-3 hover:bg-yellow-600">İdare Hukuku</a></li>
+        <li><a href="/hizmetler.html#icraiflas" class="block px-5 py-3 hover:bg-yellow-600">İcra ve İflas Hukuku</a></li>
+        <li><a href="/hizmetler.html#ceza" class="block px-5 py-3 hover:bg-yellow-600">Ceza Hukuku</a></li>
+        <li><a href="/hizmetler.html#tüketici" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tüketici Hukuku</a></li>
+      </ul>
+    </div>
+    <a href="hakkimizda.html" class="text-white hover:text-yellow-400 transition-colors duration-200">HAKKIMIZDA</a>
+    <a href="iletisim.html" class="text-white hover:text-yellow-400 transition-colors duration-200">İLETİŞİM</a>
+  </div>
+
+  <!-- Mobil Menü Butonu -->
+  <button id="menu-toggle" class="md:hidden text-white" onclick="toggleMenu()">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
+    </svg>
+  </button>
+</nav>
+
+<!-- Mobil Menü (hidden by default) -->
+<div id="mobile-menu" class="md:hidden hidden bg-black/90 text-white px-6 py-6 space-y-4 text-lg font-medium">
+  <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLERİMİZ</a>
+  <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
+  <a href="iletisim.html" class="block hover:text-yellow-400">İLETİŞİM</a>
+</div>
 
       <section id="iletisim" class="py-20 px-6 bg-black text-center">
         <h2 class="text-4xl font-bold mb-6">Bizimle İletişime Geçin</h2>
