--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kayzer Hukuk</title>
+  <script src="java.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -12,20 +13,15 @@
 
 <body class="bg-gradient-to-r from-slate-900 to-black text-white font-sans">
 
-<!-- Navbar -->
-<nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
-  <!-- Logo -->
-  <a href="index.html">
-    <div class="flex items-center space-x-4">
-      <img src="photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
-      <div>
-        <h1 class="text-3xl font-extrabold tracking-wide">KAYZER</h1>
-        <p class="text-base tracking-wider">HUKUK & DANIŞMANLIK</p>
-      </div>
+ <nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
+  <a href="index.html" class="flex items-center space-x-4">
+    <img src="photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
+    <div>
+      <h1 class="text-3xl font-extrabold tracking-wide text-white">KAYZER</h1>
+      <p class="text-base tracking-wider text-white">HUKUK & DANIŞMANLIK</p>
     </div>
   </a>
 
-  <!-- Masaüstü Menü -->
   <div class="hidden md:flex items-center space-x-10 text-lg font-medium" id="navbar">
     <div class="relative group">
       <a href="hizmetler.html" class="nav-link cursor-pointer text-white hover:text-yellow-400 transition-colors duration-200">
@@ -45,16 +41,13 @@
     <a href="hakkimizda.html" class="text-white hover:text-yellow-400 transition-colors duration-200">HAKKIMIZDA</a>
     <a href="iletisim.html" class="text-white hover:text-yellow-400 transition-colors duration-200">İLETİŞİM</a>
   </div>
-
-  <!-- Mobil Menü Butonu -->
-  <button id="menu-toggle" class="md:hidden text-white" onclick="toggleMenu()">
+  <button id="menu-toggle" class="md:hidden text-white">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
     </svg>
   </button>
 </nav>
 
-<!-- Mobil Menü (hidden by default) -->
 <div id="mobile-menu" class="md:hidden hidden bg-black/90 text-white px-6 py-6 space-y-4 text-lg font-medium">
   <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLERİMİZ</a>
   <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
