--- a/iletisim.html
+++ b/iletisim.html
@@ -6,6 +6,7 @@
   <title>Kayzer Hukuk</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body class="bg-gray-900 text-white font-sans">
