--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-gradient-to-r from-slate-900 to-black text-white font-sans">
-<nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
+<nav class="w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
   <a href="index.html">
     <div class="flex items-center space-x-4">
       <img src="photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
