--- a/hizmetler.html
+++ b/hizmetler.html
@@ -9,8 +9,7 @@
 </head>
 
 <body class="bg-gray-900 text-white font-sans">
-<nav class="fixed w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
-  <!-- Logo -->
+<nav class="w-full z-50 bg-black/20 backdrop-blur-md border-b-2 border-yellow-500 px-6 py-8 flex justify-between items-center">
   <a href="index.html">
     <div class="flex items-center space-x-4">
       <img src="photos/kayzer-png.png" alt="Kayzer Logo" class="h-24">
@@ -21,7 +20,6 @@
     </div>
   </a>
 
-  <!-- Masaüstü Menü -->
   <div class="hidden md:flex items-center space-x-10 text-lg font-medium" id="navbar">
     <div class="relative group">
       <a href="hizmetler.html" class="nav-link cursor-pointer text-white hover:text-yellow-400 transition-colors duration-200">
@@ -42,7 +40,6 @@
     <a href="iletisim.html" class="text-white hover:text-yellow-400 transition-colors duration-200">İLETİŞİM</a>
   </div>
 
-  <!-- Mobil Menü Butonu -->
   <button id="menu-toggle" class="md:hidden text-white" onclick="toggleMenu()">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
@@ -50,7 +47,6 @@
   </button>
 </nav>
 
-<!-- Mobil Menü (hidden by default) -->
 <div id="mobile-menu" class="md:hidden hidden bg-black/90 text-white px-6 py-6 space-y-4 text-lg font-medium">
   <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLERİMİZ</a>
   <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
@@ -58,9 +54,9 @@
 </div>
       
 
-      <section id="hizmetler" class="py-20 px-6 bg-gray-800">
+      <section id="hizmetler" class="py-6 px-6 bg-gray-800">
         <h3 class="text-4xl font-bold text-center mt-24 mb-16">Hizmetlerimiz</h3>
-        <div class="grid gap-8 grid-cols-3">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           
           <div class="bg-white bg-opacity-10 backdrop-blur-lg p-8 rounded-2xl shadow-2xl border border-yellow-400 transform transition-transform duration-300 max-w-3xl mx-auto cursor-pointer">
             <img src="photos/ticarethukuku.jpeg" alt="Ticaret Hukuku" class="rounded-xl mb-6 w-full h-[250px] object-cover shadow-md object-contain object-center">
