--- a/index.html
+++ b/index.html
@@ -67,32 +67,36 @@
     </a>
   </header>
 
-  <section id="hakkimizda" class="service-card py-24 px-12 bg-gray-800 text-white">
-    <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-10 items-center">
-      <div class="flex justify-center rounded-2xl border-4 border-yellow-400">
-        <img id="slideshow-image" src="photos/mustafa.JPG"
-          class="w-[650px] h-[650px] md:w-[650px] md:h-[650px] object-cover rounded-2xl shadow-lg">
-      </div>      
-
-      <div>
-        <h2 class="text-3xl font-bold mb-4 border-b pb-2 border-yellow-400">Hakkımda</h2>
-        <p class="leading-relaxed text-gray-200">
-          <b>Mustafa Talha Er</b>, 1997 yılında Kayseri'nin Kocasinan ilçesinde dünyaya geldi. 2013 yılına kadar
-          eğitimini Türkiye'de tamamladı.
-          2013-2016 yılları arasında Almanya'da Geschwister Scholl Schule ve Zeppelin Gewerbeschule'de eğitim aldı.
-          2017-2021 yılları arasında İnönü Üniversitesi Hukuk Fakültesi'nden mezun oldu.
-        </p>
-        <p class="text-lg leading-relaxed text-gray-200 mt-4">
-          2021-2023 yılları arasında Denizbank, Ziraat Bankası, Vakıfbank ve Kuveyt Türk Bankalarının vekilliğini
-          üstlenen bir hukuk ofisinde görev aldı.
-          2023 yılında kendi hukuk ofisini kurdu. 2025 yılı itibarıyla Yurt Dışı Kayserili İşverenler Birliği'nin
-          Türkiye Hukuk Sorumlusu olarak,
-          hem yurt dışında yaşayan hem de yurt içinde yaşayan olmak üzere tüm vatandaşlara hizmet vermeye devam
-          etmektedir.
-        </p>
+    <section id="hakkimizda" class="service-card py-16 px-4 sm:px-6 md:px-12 bg-gray-800 text-white">
+         <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
+        
+        <!-- Görsel Kısmı -->
+        <div class="flex justify-center rounded-2xl border-4 border-yellow-400">    
+          <img id="slideshow-image" src="photos/mustafa.JPG"
+            class="w-full max-w-xs sm:max-w-sm md:w-[650px] md:h-[650px] object-cover rounded-2xl shadow-lg">
+        </div>
+      
+        <!-- Metin Kısmı -->
+        <div>
+          <h2 class="text-3xl font-bold mb-4 border-b pb-2 border-yellow-400">Hakkımda</h2>
+          <p class="leading-relaxed text-gray-200">   
+            <b>Mustafa Talha Er</b>, 1997 yılında Kayseri'nin Kocasinan ilçesinde dünyaya geldi. 2013 yılına kadar
+            eğitimini Türkiye'de tamamladı.
+            2013-2016 yılları arasında Almanya'da Geschwister Scholl Schule ve Zeppelin Gewerbeschule'de eğitim aldı.
+            2017-2021 yılları arasında İnönü Üniversitesi Hukuk Fakültesi'nden mezun oldu.
+          </p>
+          <p class="text-base sm:text-lg leading-relaxed text-gray-200 mt-4">
+            2021-2023 yılları arasında Denizbank, Ziraat Bankası, Vakıfbank ve Kuveyt Türk Bankalarının vekilliğini
+            üstlenen bir hukuk ofisinde görev aldı.
+            2023 yılında kendi hukuk ofisini kurdu. 2025 yılı itibarıyla Yurt Dışı Kayserili İşverenler Birliği'nin
+            Türkiye Hukuk Sorumlusu olarak,
+            hem yurt dışında yaşayan hem de yurt içinde yaşayan olmak üzere tüm vatandaşlara hizmet vermeye devam
+            etmektedir.
+          </p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+
 
 
 
