--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
   </header>
 
   <section id="hakkimizda" class="service-card py-24 px-12 bg-gray-800 text-white">
-    <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-10 items-center">
+    <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
+
       <div class="flex justify-center rounded-2xl border-4 border-yellow-400">
         <img id="slideshow-image" src="photos/mustafa.JPG"
-          class="w-[650px] h-[650px] md:w-[650px] md:h-[650px] object-cover rounded-2xl shadow-lg">
-      </div>      
+          class="w-full max-w-[650px] h-auto object-cover rounded-2xl shadow-lg">
+      </div>
+   
 
       <div>
         <h2 class="text-3xl font-bold mb-4 border-b pb-2 border-yellow-400">Hakkımda</h2>
