--- a/index.html
+++ b/index.html
@@ -50,22 +50,26 @@
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
     </svg>
   </button>
-  <!-- Mobil Menü (hidden by default) -->
-<div id="mobile-menu" class="md:hidden hidden bg-black/90 text-white px-6 py-6 space-y-4 text-lg font-medium">
-  <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLERİMİZ</a>
-  <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
-  <a href="iletisim.html" class="block hover:text-yellow-400">İLETİŞİM</a>
-</div>
+
+  <div id="mobile-menu" class="md:hidden hidden absolute top-full right-0 w-48 bg-black/90 text-white px-4 py-4 space-y-4 text-sm font-medium z-50 rounded-bl-lg">
+    <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLER</a>
+    <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
+    <a href="iletisim.html" class="block hover:text-yellow-400">İLETİŞİM</a>
+  </div>
 </nav>
 
-  <header class="h-screen flex flex-col justify-center items-center text-center space-y-3 px-4">
-    <img src="/photos/kayzer-png.png" alt="Kayzer Logo" style="width: 800px; height: 800px;">
+<header class="min-h-screen flex flex-col justify-center items-center text-center space-y-6 px-4 py-12">
+  <img src="/photos/kayzer-png.png" alt="Kayzer Logo"
+       class="w-64 h-64 sm:w-80 sm:h-80 md:w-[500px] md:h-[500px] lg:w-[700px] lg:h-[700px] object-contain">
 
-    <p class="text-gray-300">Hakkınızı Arayın, Biz Yanınızdayız.</p>
-    <a href="#hakkimizda" class="mt-16 bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-3 px-6 rounded-full">
-      Biz Kimiz
-    </a>
-  </header>
+  <p class="text-gray-300 text-base sm:text-lg md:text-xl">Hakkınızı Arayın, Biz Yanınızdayız.</p>
+
+  <a href="#hakkimizda"
+     class="mt-8 bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-3 px-6 rounded-full text-sm sm:text-base md:text-lg">
+    Biz Kimiz
+  </a>
+</header>
+
 
   <section id="hakkimizda" class="service-card py-24 px-12 bg-gray-800 text-white">
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
