--- a/hizmetler.html
+++ b/hizmetler.html
@@ -48,19 +48,12 @@
             </svg>
           </button>
         
-          <div id="mobile-menu" class="md:hidden hidden absolute top-full right-0 w-48 bg-black/90 text-white px-4 py-4 space-y-4 text-sm font-medium z-50 rounded-bl-lg">
+          <div id="mobile-menu" class="md:hidden hidden absolute top-full right-0 w-48 bg-yellow-500 text-white px-4 py-4 space-y-4 text-sm font-medium z-50 rounded-bl-lg">
             <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLER</a>
             <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
            <a href="iletisim.html" class="block hover:text-yellow-400">İLETİŞİM</a>
           </div>
 </nav>        
-
-<div id="mobile-menu" class="md:hidden hidden bg-black/90 text-white px-6 py-6 space-y-4 text-lg font-medium">
-  <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLERİMİZ</a>
-  <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
-  <a href="iletisim.html" class="block hover:text-yellow-400">İLETİŞİM</a>
-</div>
-      
 
       <section id="hizmetler" class="py-6 px-6 bg-gray-800">
         <h3 class="text-4xl font-bold text-center mt-24 mb-16">Hizmetlerimiz</h3>
