--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </svg>
   </button>
 
-  <div id="mobile-menu" class="md:hidden hidden absolute top-full right-0 w-48 bg-black/90 text-white px-4 py-4 space-y-4 text-sm font-medium z-50 rounded-bl-lg">
+  <div id="mobile-menu" class="md:hidden hidden absolute top-full right-0 w-48 bg-yellow-500 text-white px-4 py-4 space-y-4 text-sm font-medium z-50 rounded-bl-lg">
     <a href="hizmetler.html" class="block hover:text-yellow-400">HİZMETLER</a>
     <a href="hakkimizda.html" class="block hover:text-yellow-400">HAKKIMIZDA</a>
     <a href="iletisim.html" class="block hover:text-yellow-400">İLETİŞİM</a>
