--- a/iletisim.html
+++ b/iletisim.html
@@ -34,6 +34,9 @@
                 <li><a href="/hizmetler.html#icraiflas" class="block px-5 py-3 hover:bg-yellow-600">İcra ve İflas Hukuku</a></li>
                 <li><a href="/hizmetler.html#ceza" class="block px-5 py-3 hover:bg-yellow-600">Ceza Hukuku</a></li>
                 <li><a href="/hizmetler.html#tüketici" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tüketici Hukuku</a></li>
+                <li><a href="/hizmetler.html#sigorta" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Sigorta Hukuku</a></li>
+                <li><a href="/hizmetler.html#tazminat" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Tazminat Hukuku</a></li>
+                <li><a href="/hizmetler.html#sözleşme" class="block px-5 py-3 hover:bg-yellow-600 rounded-b-xl">Sözleşme Hukuku</a></li>
               </ul>
             </div>
           
@@ -70,7 +73,7 @@
                   </div>
                 
                 <div class="space-y-6">
-                <h2 class="text-4xl font-extrabold text-yellow-600">Bizi Ziyaret Edin</h2>
+                <h2 class="text-4xl font-extrabold text-yellow-500">Bizi Ziyaret Edin</h2>
                 <p class="text-lg text-gray-200 leading-relaxed">
                     Ofisimiz Kayseri'nin merkezinde, kolay ulaşılabilir bir konumda yer almaktadır. Haritayı kullanarak konumumuzu detaylı inceleyebilir, bize hızlıca ulaşabilirsiniz.
                 </p>
