--- a/hizmetler.html
+++ b/hizmetler.html
@@ -382,7 +382,7 @@
             <h3 id="sözlesme" class="text-3xl font-extrabold text-yellow-400 mb-4 border-b border-yellow-500 pb-2">Sözleşme Hukuku</h3>
           
             <p class="text-base text-gray-200 leading-relaxed mb-6">
-               Beden ve ruh bütünlüğünün ihlali sebebiyle uğranılan zarar nedeniyle maddi ve manevi tazminat                davasının açılıp takip edilmesi,
+              Sözleşme, en az iki taraf tarafından bir hukuki sonuç doğurmaya yönelik irade açıklamalarından meydana gelen hukuki işlemdir. Sözleşme kapsamında taraflar borçlu ve alacaklı olarak nitelendirilir. Yapılan sözleşmelerde mutlaka en az bir borçlu ve bir adet alacaklı olur. Alacaklı ve borçlu sayısı birden çok da olabilir. Karşılıklı iradelerin uyuşması halinde sözleşmeler geçerli olur. Anayasamızda da sözleşmelerden bahsedilmiştir. Anayasanın 48. maddesinde “çalışma ve sözleşme hürriyeti” konusundan bahsedilir. Her birey çalışma ve sözleşme yapma hürriyetine sahiptir.
 
             </p>
           </div>
