--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="flex justify-center rounded-2xl border-4 border-yellow-400">
         <img id="slideshow-image" src="photos/mustafa.JPG"
-          class="w-full max-w-[650px] h-auto object-cover rounded-2xl shadow-lg">
+          class="w-full max-w-[650px] h-[670px] object-cover rounded-2xl shadow-lg">
       </div>
    
 
