--- a/index.html
+++ b/index.html
@@ -75,12 +75,15 @@
 
 
   <section id="hakkimizda" class="service-card py-24 px-12 bg-gray-800 text-white">
-    <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
-
-      <div class="flex justify-center rounded-2xl border-4 border-yellow-400">
-        <img id="slideshow-image" src="photos/mustafa.JPG"
-          class="w-full max-w-[650px] h-[670px] object-cover rounded-2xl shadow-lg">
-      </div>
+  <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-center px-4 mt-10">
+    <div class="flex justify-center rounded-2xl border-4 border-yellow-400 overflow-hidden">
+      <img
+        id="slideshow-image"
+        src="photos/mustafa.JPG"
+        class="w-full h-[400px] sm:h-[500px] md:h-[600px] object-cover rounded-2xl shadow-lg transition duration-700 ease-in-out"
+        alt="Slideshow"
+      >
+    </div>
    
 
       <div>
